--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -27,7 +27,7 @@
           <span class="price-discount">$149.99</span>
           <span class="price-original">$169.99</span>
         </p>
-        <button class="btn primary">Add to Cart</button>
+        <button class="btn"><img class="btn-icon" src="images/icon-cart.svg" alt="Shopping cart icon" />Add to Cart</button>
       </div>
     </div>
   </body>
