--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -11,13 +11,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="queries.css" />
 
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
     <div class="card">
       <div class="img-box">
-        <img class="product-img" src="images/image-product-desktop.jpg" alt="A bottle of Chanel perfume lying amidst some leaves" />
+        <img class="product-img product-img--desktop" src="images/image-product-desktop.jpg" alt="A bottle of Chanel perfume lying amidst some leaves" />
+        <img class="product-img product-img--mobile" src="images/image-product-mobile.jpg" alt="A bottle of Chanel perfume lying amidst some leaves" />
       </div>
       <div class="text-box">
         <h4 class="sub-heading">perfume</h4>
