--- a/product-preview-card-component/index.html
+++ b/product-preview-card-component/index.html
@@ -16,21 +16,23 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    <div class="card">
-      <div class="img-box">
-        <img class="product-img product-img--desktop" src="images/image-product-desktop.jpg" alt="A bottle of Chanel perfume lying amidst some leaves" />
-        <img class="product-img product-img--mobile" src="images/image-product-mobile.jpg" alt="A bottle of Chanel perfume lying amidst some leaves" />
+    <main class="container">
+      <div class="card">
+        <div class="img-box">
+          <img class="product-img product-img--desktop" src="images/image-product-desktop.jpg" alt="A bottle of Chanel perfume lying amidst some leaves" />
+          <img class="product-img product-img--mobile" src="images/image-product-mobile.jpg" alt="A bottle of Chanel perfume lying amidst some leaves" />
+        </div>
+        <div class="text-box">
+          <p class="sub-heading">perfume</p>
+          <h1 class="product-title">Gabrielle Essence Eau De Parfum</h1>
+          <p class="product-description">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+          <p class="product-price">
+            <span class="price-discount">$149.99</span>
+            <span class="price-original">$169.99</span>
+          </p>
+          <button class="btn"><img class="btn-icon" src="images/icon-cart.svg" alt="Shopping cart icon" />Add to Cart</button>
+        </div>
       </div>
-      <div class="text-box">
-        <h4 class="sub-heading">perfume</h4>
-        <p class="product-title">Gabrielle Essence Eau De Parfum</p>
-        <p class="product-description">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
-        <p class="product-price">
-          <span class="price-discount">$149.99</span>
-          <span class="price-original">$169.99</span>
-        </p>
-        <button class="btn"><img class="btn-icon" src="images/icon-cart.svg" alt="Shopping cart icon" />Add to Cart</button>
-      </div>
-    </div>
+    </main>
   </body>
 </html>
