--- a/interactive-rating-component/index.html
+++ b/interactive-rating-component/index.html
@@ -3,27 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="description" content="This is an interactive rating component as a coding exercise" />
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" />
     <link rel="stylesheet" href="css/style.css" />
-
     <title>Frontend Mentor | Interactive rating component</title>
   </head>
   <body>
-    <!--
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-  -->
-
+    <main>
+      <div class="rating-container">
+        <img class="icon mb-l" src="images/icon-star.svg" alt="A star" />
+        <h1 class="rating-title mb-m">How did we do?</h1>
+        <p class="rating-descripton mb-l">
+          Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
+        </p>
+        <ul class="ratings mb-l">
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+          <li>4</li>
+          <li>5</li>
+        </ul>
+        <button class="btn">submit</button>
+      </div>
+    </main>
     <!--
   You selected X out of 5
 
