interactive rating component - desktop view

--- a/interactive-rating-component/index.html
+++ b/interactive-rating-component/index.html
@@ -14,17 +14,17 @@
   <body>
     <main>
       <div class="rating-container">
-        <img class="icon mb-l" src="images/icon-star.svg" alt="A star" />
+        <div class="icon-bubble mb-l"><img class="icon" src="images/icon-star.svg" alt="A star" /></div>
         <h1 class="rating-title mb-m">How did we do?</h1>
-        <p class="rating-descripton mb-l">
+        <p class="rating-description mb-l">
           Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
         </p>
         <ul class="ratings mb-l">
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
-          <li>5</li>
+          <div class="rating"><span class="rating-text">1</span></div>
+          <div class="rating"><span class="rating-text">2</span></div>
+          <div class="rating"><span class="rating-text">3</span></div>
+          <div class="rating"><span class="rating-text">4</span></div>
+          <div class="rating"><span class="rating-text">5</span></div>
         </ul>
         <button class="btn">submit</button>
       </div>
