--- a/interactive-rating-component/index.html
+++ b/interactive-rating-component/index.html
@@ -9,32 +9,47 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" />
     <link rel="stylesheet" href="css/style.css" />
+    <script defer src="js/main.js"></script>
     <title>Frontend Mentor | Interactive rating component</title>
   </head>
   <body>
     <main>
-      <div class="rating-container">
+      <form class="rating-container">
         <div class="icon-bubble mb-l"><img class="icon" src="images/icon-star.svg" alt="A star" /></div>
         <h1 class="rating-title mb-m">How did we do?</h1>
         <p class="rating-description mb-l">
           Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
         </p>
-        <ul class="ratings mb-l">
-          <div class="rating"><span class="rating-text">1</span></div>
-          <div class="rating"><span class="rating-text">2</span></div>
-          <div class="rating"><span class="rating-text">3</span></div>
-          <div class="rating"><span class="rating-text">4</span></div>
-          <div class="rating"><span class="rating-text">5</span></div>
-        </ul>
+        <div class="ratings mb-l">
+          <label for="rating-1">
+            <input type="radio" name="rating" id="rating-1" value="1" class="rating" />
+            <span class="rating-text">1</span>
+          </label>
+          <label for="rating-2">
+            <input type="radio" name="rating" id="rating-2" value="2" class="rating" />
+            <span class="rating-text">2</span>
+          </label>
+          <label for="rating-3">
+            <input type="radio" name="rating" id="rating-3" value="3" class="rating" />
+            <span class="rating-text">3</span>
+          </label>
+          <label for="rating-4">
+            <input type="radio" name="rating" id="rating-4" value="4" class="rating" />
+            <span class="rating-text">4</span>
+          </label>
+          <label for="rating-5">
+            <input type="radio" name="rating" id="rating-5" value="5" class="rating" />
+            <span class="rating-text">5</span>
+          </label>
+        </div>
         <button class="btn">submit</button>
+      </form>
+      <div class="thank-you-container hidden">
+        <img class="mb-l" src="images/illustration-thank-you.svg" alt="An illustration of a check out process with credit card and receipt" />
+        <div class="thank-you-rating-text mb-l">You selected <span class="thank-you-rating">X</span> out of 5</div>
+        <h1 class="thank-you-title mb-m">Thank you!</h1>
+        <p class="thank-you-description">We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
       </div>
     </main>
-    <!--
-  You selected X out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-  --></body>
+  </body>
 </html>
