--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -19,15 +19,21 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="container">
-      <img class="img-qr" src="images/image-qr-code.png" />
-      <h1 class="main-text">
-        Improve your front-end skills by building projects
-      </h1>
-      <p class="sub-text">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
-    </div>
+    <main role="main" class="container">
+      <div class="card">
+        <img
+          class="img-qr"
+          alt="QR code for scanning"
+          src="images/image-qr-code.png"
+        />
+        <h1 class="main-text">
+          Improve your front-end skills by building projects
+        </h1>
+        <p class="sub-text">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
+    </main>
   </body>
 </html>
