--- a/blog-preview-card/index.html
+++ b/blog-preview-card/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Blog preview card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | Blog preview card</title>
+  </head>
+  <body>
+    <main class="container" role="main">
+      <div class="card">
+        <img
+          class="card-illustration"
+          alt="Abstract HTML and CSS illustration"
+          src="assets/images/illustration-article.svg"
+        />
+        <span class="card-tag">Learning</span>
+        <p class="card-date">Published 21 Dec 2023</p>
+        <h3 class="card-title">HTML & CSS foundations</h3>
+        <p class="card-text">
+          These languages are the backbone of every website, defining structure,
+          content, and presentation.
+        </p>
+        <div class="card-author">
+          <img
+            class="card-author-picture"
+            alt="Headshot of Greg Hooper"
+            src="assets/images/image-avatar.webp"
+          /><span class="card-author-name">Greg Hooper</span>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
