--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -1,77 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Recipe page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Simple Omelette Recipe
-
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
-
-  Preparation time
-
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
-
-  Ingredients
-
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
-
-  Instructions
-
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
-
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
-
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
-
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
-
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+    <title>Frontend Mentor | Recipe page</title>
+  </head>
+  <body>
+    <main role="main" class="container">
+      <div class="recipe">
+        <img
+          class="recipe-img"
+          src="assets/images/image-omelette.jpeg"
+          alt="Picture of an omelette, filled with greens"
+        />
+        <section class="recipe-section-head">
+          <h1>Simple Omelette Recipe</h1>
+          <p class="recipe-description">
+            An easy and quick dish, perfect for any meal. This classic omelette
+            combines beaten eggs cooked to perfection, optionally filled with
+            your choice of cheese, vegetables, or meats.
+          </p>
+        </section>
+        <section class="recipe-section-prep">
+          <h3>Preparation time</h3>
+          <ul>
+            <li>
+              <span><strong>Total</strong>: Approximately 10 minutes</span>
+            </li>
+            <li>
+              <span><strong>Preparation</strong>: 5 minutes</span>
+            </li>
+            <li>
+              <span><strong>Cooking</strong>: 5 minutes</span>
+            </li>
+          </ul>
+        </section>
+        <section class="recipe-section-ingredients">
+          <h2>Ingredients</h2>
+          <ul>
+            <li><span>2-3 large eggs</span></li>
+            <li><span>Salt, to taste</span></li>
+            <li><span>Pepper, to taste</span></li>
+            <li><span>1 tablespoon of butter or oil</span></li>
+            <li>
+              <span>
+                Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              </span>
+            </li>
+          </ul>
+        </section>
+        <div class="line-break"></div>
+        <section class="recipe-section-instructions">
+          <h2>Instructions</h2>
+          <ol>
+            <li>
+              <span class="marker">1.</span>
+              <p>
+                <strong>Beat the eggs</strong>: In a bowl, beat the eggs with a
+                pinch of salt and pepper until they are well mixed. You can add
+                a tablespoon of water or milk for a fluffier texture.
+              </p>
+            </li>
+            <li>
+              <span class="marker">2.</span>
+              <p>
+                <strong>Heat the pan</strong>: Place a non-stick frying pan over
+                medium heat and add butter or oil.
+              </p>
+            </li>
+            <li>
+              <span class="marker">3.</span>
+              <p>
+                <strong>Cook the omelette</strong>: Once the butter is melted
+                and bubbling, pour in the eggs. Tilt the pan to ensure the eggs
+                evenly coat the surface.
+              </p>
+            </li>
+            <li>
+              <span class="marker">4.</span>
+              <p>
+                <strong>Add fillings (optional)</strong>: When the eggs begin to
+                set at the edges but are still slightly runny in the middle,
+                sprinkle your chosen fillings over one half of the omelette.
+              </p>
+            </li>
+            <li>
+              <span class="marker">5.</span>
+              <p>
+                <strong>Fold and serve</strong>: As the omelette continues to
+                cook, carefully lift one edge and fold it over the fillings. Let
+                it cook for another minute, then slide it onto a plate.
+              </p>
+            </li>
+            <li>
+              <span class="marker">6.</span>
+              <p>
+                <strong>Enjoy</strong>: Serve hot, with additional salt and
+                pepper if needed.
+              </p>
+            </li>
+          </ol>
+        </section>
+        <div class="line-break"></div>
+        <section class="recipe-section-nutrition">
+          <h2>Nutrition</h2>
+          <p>
+            The table below shows nutritional values per serving without the
+            additional fillings.
+          </p>
+          <div class="table">
+            <div class="row">
+              <span class="unit">Calories</span>
+              <span class="amount">277kcal</span>
+            </div>
+            <div class="table-line-break"></div>
+            <div class="row">
+              <span class="unit">Carbs</span>
+              <span class="amount">0g</span>
+            </div>
+            <div class="table-line-break"></div>
+            <div class="row">
+              <span class="unit">Protein</span>
+              <span class="amount">20g</span>
+            </div>
+            <div class="table-line-break"></div>
+            <div class="row">
+              <span class="unit">Fat</span>
+              <span class="amount">22g</span>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+  </body>
 </html>
