--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -11,6 +11,7 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/media.css" />
     <title>Frontend Mentor | Recipe page</title>
   </head>
   <body>
@@ -32,28 +33,20 @@
         <section class="recipe-section-prep">
           <h3>Preparation time</h3>
           <ul>
-            <li>
-              <span><strong>Total</strong>: Approximately 10 minutes</span>
-            </li>
-            <li>
-              <span><strong>Preparation</strong>: 5 minutes</span>
-            </li>
-            <li>
-              <span><strong>Cooking</strong>: 5 minutes</span>
-            </li>
+            <li><strong>Total</strong>: Approximately 10 minutes</li>
+            <li><strong>Preparation</strong>: 5 minutes</li>
+            <li><strong>Cooking</strong>: 5 minutes</li>
           </ul>
         </section>
         <section class="recipe-section-ingredients">
           <h2>Ingredients</h2>
           <ul>
-            <li><span>2-3 large eggs</span></li>
-            <li><span>Salt, to taste</span></li>
-            <li><span>Pepper, to taste</span></li>
-            <li><span>1 tablespoon of butter or oil</span></li>
+            <li>2-3 large eggs</li>
+            <li>Salt, to taste</li>
+            <li>Pepper, to taste</li>
+            <li>1 tablespoon of butter or oil</li>
             <li>
-              <span>
-                Optional fillings: cheese, diced vegetables, cooked meats, herbs
-              </span>
+              Optional fillings: cheese, diced vegetables, cooked meats, herbs
             </li>
           </ul>
         </section>
@@ -62,50 +55,32 @@
           <h2>Instructions</h2>
           <ol>
             <li>
-              <span class="marker">1.</span>
-              <p>
-                <strong>Beat the eggs</strong>: In a bowl, beat the eggs with a
-                pinch of salt and pepper until they are well mixed. You can add
-                a tablespoon of water or milk for a fluffier texture.
-              </p>
+              <strong>Beat the eggs</strong>: In a bowl, beat the eggs with a
+              pinch of salt and pepper until they are well mixed. You can add a
+              tablespoon of water or milk for a fluffier texture.
             </li>
             <li>
-              <span class="marker">2.</span>
-              <p>
-                <strong>Heat the pan</strong>: Place a non-stick frying pan over
-                medium heat and add butter or oil.
-              </p>
+              <strong>Heat the pan</strong>: Place a non-stick frying pan over
+              medium heat and add butter or oil.
             </li>
             <li>
-              <span class="marker">3.</span>
-              <p>
-                <strong>Cook the omelette</strong>: Once the butter is melted
-                and bubbling, pour in the eggs. Tilt the pan to ensure the eggs
-                evenly coat the surface.
-              </p>
+              <strong>Cook the omelette</strong>: Once the butter is melted and
+              bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
+              coat the surface.
             </li>
             <li>
-              <span class="marker">4.</span>
-              <p>
-                <strong>Add fillings (optional)</strong>: When the eggs begin to
-                set at the edges but are still slightly runny in the middle,
-                sprinkle your chosen fillings over one half of the omelette.
-              </p>
+              <strong>Add fillings (optional)</strong>: When the eggs begin to
+              set at the edges but are still slightly runny in the middle,
+              sprinkle your chosen fillings over one half of the omelette.
             </li>
             <li>
-              <span class="marker">5.</span>
-              <p>
-                <strong>Fold and serve</strong>: As the omelette continues to
-                cook, carefully lift one edge and fold it over the fillings. Let
-                it cook for another minute, then slide it onto a plate.
-              </p>
+              <strong>Fold and serve</strong>: As the omelette continues to
+              cook, carefully lift one edge and fold it over the fillings. Let
+              it cook for another minute, then slide it onto a plate.
             </li>
             <li>
-              <span class="marker">6.</span>
-              <p>
-                <strong>Enjoy</strong>: Serve hot, with additional salt and
-                pepper if needed.
-              </p>
+              <strong>Enjoy</strong>: Serve hot, with additional salt and pepper
+              if needed.
             </li>
           </ol>
         </section>
