--- a/four-card-feature/index.html
+++ b/four-card-feature/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
     <link
       rel="icon"
       type="image/png"
@@ -11,23 +10,54 @@
       href="./images/favicon-32x32.png"
     />
     <title>Frontend Mentor | Four card feature section</title>
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    Reliable, efficient delivery Powered by Technology Our Artificial
-    Intelligence powered tools use millions of project data points to ensure
-    that your project is successful Supervisor Monitors activity to identify
-    project roadblocks Team Builder Scans our talent network to create the
-    optimal team for your project Karma Regularly evaluates our talent to ensure
-    quality Calculator Uses data from past projects to provide better delivery
-    estimates
-
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </p>
-    </footer>
+    <main class="main">
+      <header class="header">
+        <h1>
+          <span class="subdued">Reliable, efficient delivery</span>
+          Powered by Technology
+        </h1>
+        <p>
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
+        </p>
+      </header>
+      <div class="cards">
+        <section class="card card--1">
+          <h2>Supervisor</h2>
+          <p>Monitors activity to identify project roadblocks</p>
+          <img
+            class="icon"
+            src="images/icon-supervisor.svg"
+            alt="Manifying Glass"
+          />
+        </section>
+        <section class="card card--2">
+          <h2>Team Builder</h2>
+          <p>
+            Scans our talent network to create the optimal team for your project
+          </p>
+          <img class="icon" src="images/icon-team-builder.svg" alt="House" />
+        </section>
+        <section class="card card--3">
+          <h2>Karma</h2>
+          <p>Regularly evaluates our talent to ensure quality</p>
+          <img class="icon" src="images/icon-karma.svg" alt="Lightbulb" />
+        </section>
+        <section class="card card--4">
+          <h2>Calculator</h2>
+          <p>
+            Uses data from past projects to provide better delivery estimates
+          </p>
+          <img
+            class="icon"
+            src="images/icon-calculator.svg"
+            alt="Computer Monitor"
+          />
+        </section>
+      </div>
+    </main>
   </body>
 </html>
