--- a/testimonials-grid/index.html
+++ b/testimonials-grid/index.html
@@ -15,28 +15,35 @@
   <body>
     <div class="testimonials">
       <section class="testimonial">
+        <img
+          src="images/bg-pattern-quotation.svg"
+          alt=""
+          class="pattern-quote"
+        />
         <div class="author">
           <img
             src="images/image-daniel.jpg"
             alt="Headshot of Daniel"
             class="author--img"
           />
-          <p class="author--name">Daniel Clifford</p>
-          <p class="author--title">Verified Graduate</p>
+          <div>
+            <p class="author--name">Daniel Clifford</p>
+            <p class="author--title">Verified Graduate</p>
+          </div>
         </div>
         <p class="quote">
           I received a job offer mid-course, and the subjects I learned were
           current, if not more so, in the company I joined. I honestly feel I
           got every penny's worth.
         </p>
-        <p class="bio">
-          “I was an EMT for many years before I joined the bootcamp. I've been
+        <p class="review">
+          “ I was an EMT for many years before I joined the bootcamp. I've been
           looking to make a transition and have heard some people who had an
           amazing experience here. I signed up for the free intro course and
           found it incredibly fun! I enrolled shortly thereafter. The next 12
           weeks was the best - and most grueling - time of my life. Since
           completing the course, I've successfully switched careers, working as
-          a Software Engineer at a VR startup.”
+          a Software Engineer at a VR startup. ”
         </p>
       </section>
       <section class="testimonial">
@@ -46,14 +53,16 @@
             alt="Headshot of Jonathan"
             class="author--img"
           />
-          <p class="author--name">Jonathan Walters</p>
-          <p class="author--title">Verified Graduate</p>
+          <div>
+            <p class="author--name">Jonathan Walters</p>
+            <p class="author--title">Verified Graduate</p>
+          </div>
         </div>
         <p class="quote">The team was very supportive and kept me motivated</p>
-        <p class="bio">
-          “I started as a total newbie with virtually no coding skills. I now
+        <p class="review">
+          “ I started as a total newbie with virtually no coding skills. I now
           work as a mobile engineer for a big company. This was one of the best
-          investments I've made in myself.”
+          investments I've made in myself. ”
         </p>
       </section>
       <section class="testimonial">
@@ -63,13 +72,15 @@
             alt="Headshot of Jeanette"
             class="author--img"
           />
-          <p class="author--name">Jeanette Harmon</p>
-          <p class="author--title">Verified Graduate</p>
+          <div>
+            <p class="author--name">Jeanette Harmon</p>
+            <p class="author--title">Verified Graduate</p>
+          </div>
         </div>
         <p class="quote">An overall wonderful and rewarding experience</p>
-        <p class="bio">
-          “Thank you for the wonderful experience! I now have a job I really
-          enjoy, and make a good living while doing something I love.”
+        <p class="review">
+          “ Thank you for the wonderful experience! I now have a job I really
+          enjoy, and make a good living while doing something I love. ”
         </p>
       </section>
       <section class="testimonial">
@@ -79,21 +90,23 @@
             alt="Headshot of Patrick"
             class="author--img"
           />
-          <p class="author--name">Patrick Abrams</p>
-          <p class="author--title">Verified Graduate</p>
+          <div>
+            <p class="author--name">Patrick Abrams</p>
+            <p class="author--title">Verified Graduate</p>
+          </div>
         </div>
         <p class="quote">
           Awesome teaching support from TAs who did the bootcamp themselves.
           Getting guidance from them and learning from their experiences was
           easy.
         </p>
-        <p class="bio">
-          “The staff seem genuinely concerned about my progress which I find
+        <p class="review">
+          “ The staff seem genuinely concerned about my progress which I find
           really refreshing. The program gave me the confidence necessary to be
           able to go out in the world and present myself as a capable junior
           developer. The standard is above the rest. You will get the personal
           attention you need from an incredible community of smart and amazing
-          people.”
+          people. ”
         </p>
       </section>
       <section class="testimonial">
@@ -103,14 +116,16 @@
             alt="Headshot of Kira"
             class="author--img"
           />
-          <p class="author--name">Kira Whittle</p>
-          <p class="author--title">Verified Graduate</p>
+          <div>
+            <p class="author--name">Kira Whittle</p>
+            <p class="author--title">Verified Graduate</p>
+          </div>
         </div>
         <p class="quote">
           Such a life-changing experience. Highly recommended!
         </p>
-        <p class="bio">
-          “Before joining the bootcamp, I've never written a line of code. I
+        <p class="review">
+          “ Before joining the bootcamp, I've never written a line of code. I
           needed some structure from professionals who can help me learn
           programming step by step. I was encouraged to enroll by a former
           student of theirs who can only say wonderful things about the program.
@@ -120,7 +135,7 @@
           next level in a way that no tutorial could ever have. In fact, I've
           often referred to it during interviews as an example of my developent
           experience. It certainly helped me land a job as a full-stack
-          developer after receiving multiple offers. 100% recommend!”
+          developer after receiving multiple offers. 100% recommend! ”
         </p>
       </section>
     </div>
