--- a/testimonials-grid/index.html
+++ b/testimonials-grid/index.html
@@ -11,6 +11,7 @@
     />
     <title>Frontend Mentor | Testimonials Grid</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/media.css" />
   </head>
   <body>
     <div class="testimonials">
