--- a/testimonials-grid/index.html
+++ b/testimonials-grid/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/media.css" />
   </head>
   <body>
-    <div class="testimonials">
+    <main class="testimonials">
       <section class="testimonial">
         <img
           src="images/bg-pattern-quotation.svg"
@@ -32,11 +32,11 @@
             <p class="author--title">Verified Graduate</p>
           </div>
         </div>
-        <p class="quote">
+        <h2 class="quote">
           I received a job offer mid-course, and the subjects I learned were
           current, if not more so, in the company I joined. I honestly feel I
           got every penny's worth.
-        </p>
+        </h2>
         <p class="review">
           “ I was an EMT for many years before I joined the bootcamp. I've been
           looking to make a transition and have heard some people who had an
@@ -59,7 +59,9 @@
             <p class="author--title">Verified Graduate</p>
           </div>
         </div>
-        <p class="quote">The team was very supportive and kept me motivated</p>
+        <h2 class="quote">
+          The team was very supportive and kept me motivated
+        </h2>
         <p class="review">
           “ I started as a total newbie with virtually no coding skills. I now
           work as a mobile engineer for a big company. This was one of the best
@@ -78,7 +80,7 @@
             <p class="author--title">Verified Graduate</p>
           </div>
         </div>
-        <p class="quote">An overall wonderful and rewarding experience</p>
+        <h2 class="quote">An overall wonderful and rewarding experience</h2>
         <p class="review">
           “ Thank you for the wonderful experience! I now have a job I really
           enjoy, and make a good living while doing something I love. ”
@@ -96,11 +98,11 @@
             <p class="author--title">Verified Graduate</p>
           </div>
         </div>
-        <p class="quote">
+        <h2 class="quote">
           Awesome teaching support from TAs who did the bootcamp themselves.
           Getting guidance from them and learning from their experiences was
           easy.
-        </p>
+        </h2>
         <p class="review">
           “ The staff seem genuinely concerned about my progress which I find
           really refreshing. The program gave me the confidence necessary to be
@@ -122,9 +124,9 @@
             <p class="author--title">Verified Graduate</p>
           </div>
         </div>
-        <p class="quote">
+        <h2 class="quote">
           Such a life-changing experience. Highly recommended!
-        </p>
+        </h2>
         <p class="review">
           “ Before joining the bootcamp, I've never written a line of code. I
           needed some structure from professionals who can help me learn
@@ -139,6 +141,6 @@
           developer after receiving multiple offers. 100% recommend! ”
         </p>
       </section>
-    </div>
+    </main>
   </body>
 </html>
