--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -14,37 +14,76 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <main>
       <section class="section section--1">
-        <img src="images/logo.svg" alt="meet logo" />
-        <h1>Group Chat for Everyone</h1>
-        <p>
-          Meet makes it easy to connect with others face-to-face virtually and
-          collaborate across any device.
-        </p>
-        <div class="buttons">
-          <button>Download v1.3</button>
-          <button>What is it?</button>
+        <img class="logo" src="images/logo.svg" alt="meet logo" />
+        <img
+          class="hero"
+          src="images/image-hero.png"
+          alt="twelve circular headshots of various people"
+        />
+        <div class="content">
+          <h1>Group Chat for Everyone</h1>
+          <p>
+            Meet makes it easy to connect with others face-to-face virtually and
+            collaborate across any device.
+          </p>
+          <div class="btns">
+            <button class="btn btn--primary">
+              Download <span class="accent">v1.3</span>
+            </button>
+            <button class="btn">What is it?</button>
+          </div>
+        </div>
+
+        <div class="line line--1"></div>
+        <div class="numeral numeral--1">01</div>
+      </section>
+      <section class="section section--2">
+        <div class="gallery">
+          <img
+            class="gallery--img"
+            src="images/image-woman-in-videocall.jpg"
+            alt="woman in video call"
+          />
+          <img
+            class="gallery--img"
+            src="images/image-women-videochatting.jpg"
+            alt="woman video chatting"
+          />
+          <img
+            class="gallery--img"
+            src="images/image-men-in-meeting.jpg"
+            alt="man in video call"
+          />
+          <img
+            class="gallery--img"
+            src="images/image-man-texting.jpg"
+            alt="man texting"
+          />
+        </div>
+        <div class="content">
+          <h3>Built for modern use</h3>
+          <h2>Smarter meetings, all in one place</h2>
+          <p>
+            Send messages, share files, show your screen, and record your
+            meetings — all in one workspace. Control who can join with
+            invite-only team access, data encryption, and data export.
+          </p>
+        </div>
+        <div class="divider">
+          <div class="line line--2"></div>
+          <div class="numeral numeral--2">02</div>
         </div>
       </section>
-      <div>01</div>
-      <section class="section section--2">
-        <h3>Built for modern use</h3>
-        <h2>Smarter meetings, all in one place</h2>
-        <p>
-          Send messages, share files, show your screen, and record your meetings
-          — all in one workspace. Control who can join with invite-only team
-          access, data encryption, and data export.
-        </p>
-      </section>
-      <div>02</div>
       <section class="section section--3">
-        <h2>Experience more together</h2>
-        <p>
-          Stay connected with reliable HD meetings and unlimited one-on-one and
-          group video sessions.
-        </p>
-        <button>Download v1.3</button>
+        <div class="content">
+          <h2>Experience more together</h2>
+          <p>
+            Stay connected with reliable HD meetings and unlimited one-on-one
+            and group video sessions.
+          </p>
+          <button class="btn">Download <span class="accent">v1.3</span></button>
+        </div>
       </section>
     </main>
   </body>
