meet landing page - improvements

--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -75,7 +75,7 @@
           />
         </div>
         <div class="content content--2">
-          <h3>Built for modern use</h3>
+          <p class="tagline">Built for modern use</p>
           <h2>Smarter meetings, all in one place</h2>
           <p>
             Send messages, share files, show your screen, and record your
