article preview - active states

--- a/article-preview/index.html
+++ b/article-preview/index.html
@@ -12,6 +12,7 @@
     <title>Frontend Mentor | Article preview component</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/media.css" />
+    <script defer src="js/main.js"></script>
   </head>
   <body>
     <main class="card">
