newsletter sign up - mobile sign up css

--- a/newsletter-sign-up/index.html
+++ b/newsletter-sign-up/index.html
@@ -9,6 +9,7 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="./assets/css/main.css" />
     <title>
       Frontend Mentor | Newsletter sign-up form with success message
     </title>
@@ -70,7 +71,7 @@
         </form>
       </main>
     </article>
-    <article class="success">
+    <article class="success hidden">
       <img
         src="assets/images/icon-success.svg"
         alt="tick mark"
