tip calculator app - javascript with validation and reset

--- a/tip-calculator-app/index.html
+++ b/tip-calculator-app/index.html
@@ -83,7 +83,7 @@
             <p id="output-total" class="output">$0.00</p>
           </div>
         </div>
-        <button class="btn reset-btn inactive">Reset</button>
+        <button id="reset" class="btn reset-btn inactive">Reset</button>
       </section>
     </main>
   </body>
