password generator app - active states

--- a/password-generator-app/index.html
+++ b/password-generator-app/index.html
@@ -19,7 +19,7 @@
         <p id="password">P4$5W0rD!</p>
         <span id="copy-state">copied</span>
         <button id="btn-copy">
-          <img src="assets/images/icon-copy.svg" alt="copy icon" />
+          <img class="svg" src="assets/images/icon-copy.svg" alt="copy icon" />
         </button>
       </div>
       <form id="generator-form" class="sub-container">
@@ -66,6 +66,7 @@
         <button id="btn-generate">
           Generate
           <img
+            class="svg"
             src="assets/images/icon-arrow-right.svg"
             alt="arrow to the right"
           />
