frontend quiz app - welcome page (desktop)

--- a/frontend-quiz-app/index.html
+++ b/frontend-quiz-app/index.html
@@ -31,52 +31,54 @@
         </div>
       </header>
       <main id="content">
-        <section class="welcome">
-          <h1 class="welcome__title">Welcome to the Frontend Quiz!</h1>
-          <p class="welcome__instruction">Pick a subject to get started.</p>
-        </section>
-        <section class="topic-btns">
-          <button class="topic-btn">
-            <div class="topic-btn__icon orange">
-              <img
-                class="topic-btn__img"
-                src="assets/images/icon-html.svg"
-                alt=""
-              />
-            </div>
-            HTML
-          </button>
-          <button class="topic-btn">
-            <div class="topic-btn__icon green">
-              <img
-                class="topic-btn__img"
-                src="assets/images/icon-css.svg"
-                alt=""
-              />
-            </div>
-            CSS
-          </button>
-          <button class="topic-btn">
-            <div class="topic-btn__icon blue">
-              <img
-                class="topic-btn__img"
-                src="assets/images/icon-js.svg"
-                alt=""
-              />
-            </div>
-            Javascript
-          </button>
-          <button class="topic-btn">
-            <div class="topic-btn__icon purple">
-              <img
-                class="topic-btn__img"
-                src="assets/images/icon-accessibility.svg"
-                alt=""
-              />
-            </div>
-            Accessibility
-          </button>
-        </section>
+        <div class="sections">
+          <section class="welcome">
+            <h1 class="welcome__title">Welcome to the Frontend Quiz!</h1>
+            <p class="welcome__instruction">Pick a subject to get started.</p>
+          </section>
+          <section class="topic-btns">
+            <button class="topic-btn">
+              <div class="topic-btn__icon orange">
+                <img
+                  class="topic-btn__img"
+                  src="assets/images/icon-html.svg"
+                  alt=""
+                />
+              </div>
+              HTML
+            </button>
+            <button class="topic-btn">
+              <div class="topic-btn__icon green">
+                <img
+                  class="topic-btn__img"
+                  src="assets/images/icon-css.svg"
+                  alt=""
+                />
+              </div>
+              CSS
+            </button>
+            <button class="topic-btn">
+              <div class="topic-btn__icon blue">
+                <img
+                  class="topic-btn__img"
+                  src="assets/images/icon-js.svg"
+                  alt=""
+                />
+              </div>
+              Javascript
+            </button>
+            <button class="topic-btn">
+              <div class="topic-btn__icon purple">
+                <img
+                  class="topic-btn__img"
+                  src="assets/images/icon-accessibility.svg"
+                  alt=""
+                />
+              </div>
+              Accessibility
+            </button>
+          </section>
+        </div>
       </main>
     </article>
   </body>
